# MyTextEditor

./: CMakeLists.txt  README.md  test.txt
lib/: CMakeLists.txt
lib/MyString/: CMakeLists.txt  MyString.cpp  MyString.h
lib/PDCursesAdapter/: PDCursesAdapter.cpp  PDCursesAdapter.hpp
lib/pdcurses/: CMakeLists.txt
lib/pdcurses_adapter/: CMakeLists.txt  PDCursesAdapter.cpp  PDCursesAdapter.hpp
src/: CMakeLists.txt  main.cpp
src/Controller/: CMakeLists.txt  Controller.cpp  Controller.hpp
src/Model/: CMakeLists.txt  Model.cpp  Model.hpp
src/View/: CMakeLists.txt  View.cpp  View.hpp
src/log/: CMakeLists.txt  Log.cpp  Log.hpp
